--- a/app/src/main/res/layout/about_shabd.xml
+++ b/app/src/main/res/layout/about_shabd.xml
@@ -17,7 +17,7 @@
             android:layout_height="wrap_content"
             android:text="@string/shabd"
             android:textAlignment="center"
-            android:textColor="@color/browser_actions_bg_grey"
+            android:textColor="@color/white"
             android:textSize="50sp"
             android:textStyle="bold" />
     </LinearLayout>
@@ -35,7 +35,8 @@
             android:layout_height="wrap_content"
             android:gravity="center"
             android:text="@string/overview"
-            android:textColor="@color/browser_actions_bg_grey"
+            android:textStyle="bold"
+            android:textColor="@color/white"
             android:textSize="22sp" />
 
     </LinearLayout>
@@ -45,7 +46,7 @@
         android:layout_height="wrap_content"
         android:layout_margin="20dp"
         android:text="@string/Overview_content"
-        android:textColor="@color/browser_actions_text_color"
+        android:textColor="@android:color/black"
         android:textSize="14sp" />
 
     <LinearLayout
@@ -61,7 +62,8 @@
             android:layout_height="wrap_content"
             android:gravity="center"
             android:text="@string/developer"
-            android:textColor="@color/browser_actions_bg_grey"
+            android:textStyle="bold"
+            android:textColor="@color/white"
             android:textSize="22sp" />
 
     </LinearLayout>
