--- a/app/src/main/res/layout/fragment_setting.xml
+++ b/app/src/main/res/layout/fragment_setting.xml
@@ -21,9 +21,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="116dp"
                 android:layout_gravity="center_horizontal"
+                android:background="?android:attr/selectableItemBackground"
                 android:paddingTop="30dp"
                 android:paddingBottom="10dp"
-                android:background="?android:attr/selectableItemBackground"
                 android:src="@drawable/profile_photo"
                 app:civ_border_color="#FF000000"
                 app:civ_border_width="2dp" />
@@ -31,8 +31,8 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="40dp"
-                android:text="NAME"
                 android:background="?android:attr/selectableItemBackground"
+                android:text="NAME"
                 android:textAlignment="center"
                 android:textColor="#000000"
                 android:textSize="30dp"
@@ -51,11 +51,11 @@
                 android:orientation="vertical">
 
                 <LinearLayout
-                    android:background="?android:attr/selectableItemBackground"
                     android:layout_width="match_parent"
                     android:layout_height="40dp"
                     android:layout_marginLeft="10dp"
                     android:layout_marginTop="10dp"
+                    android:background="?android:attr/selectableItemBackground"
                     android:orientation="horizontal">
 
                     <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -63,7 +63,7 @@
                         android:layout_height="match_parent"
                         android:layout_marginRight="15dp"
                         android:src="@drawable/layerlist_update"
-                        app:civ_circle_background_color="@color/fui_bgAnonymous" />
+                        app:civ_circle_background_color="@color/colorPrimary" />
 
                     <TextView
                         android:layout_width="wrap_content"
@@ -75,11 +75,11 @@
                 </LinearLayout>
 
                 <LinearLayout
-                    android:background="?android:attr/selectableItemBackground"
                     android:layout_width="match_parent"
                     android:layout_height="40dp"
                     android:layout_marginLeft="10dp"
                     android:layout_marginTop="20dp"
+                    android:background="?android:attr/selectableItemBackground"
                     android:orientation="horizontal">
 
                     <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -99,11 +99,11 @@
                 </LinearLayout>
 
                 <LinearLayout
-                    android:background="?android:attr/selectableItemBackground"
                     android:layout_width="match_parent"
                     android:layout_height="40dp"
                     android:layout_marginLeft="10dp"
                     android:layout_marginTop="20dp"
+                    android:background="?android:attr/selectableItemBackground"
                     android:orientation="horizontal">
 
                     <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -111,7 +111,7 @@
                         android:layout_height="match_parent"
                         android:layout_marginRight="15dp"
                         android:src="@drawable/layerlist_translate"
-                        app:civ_circle_background_color="@color/fui_bgEmail" />
+                        app:civ_circle_background_color="@color/white" />
 
                     <TextView
                         android:layout_width="wrap_content"
@@ -123,12 +123,12 @@
                 </LinearLayout>
 
                 <LinearLayout
-                    android:background="?android:attr/selectableItemBackground"
+                    android:id="@+id/setting_logout_ll"
                     android:layout_width="match_parent"
                     android:layout_height="40dp"
                     android:layout_marginLeft="10dp"
-                    android:id="@+id/setting_logout_ll"
                     android:layout_marginTop="20dp"
+                    android:background="?android:attr/selectableItemBackground"
                     android:orientation="horizontal">
 
                     <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -174,7 +174,7 @@
                         android:layout_height="match_parent"
                         android:layout_marginRight="15dp"
                         android:src="@drawable/layerlist_about"
-                        app:civ_circle_background_color="@color/fui_bgAnonymous" />
+                        app:civ_circle_background_color="@color/colorPrimary" />
 
                     <TextView
                         android:layout_width="wrap_content"
@@ -186,18 +186,19 @@
                 </LinearLayout>
 
                 <LinearLayout
-                    android:background="?android:attr/selectableItemBackground"
                     android:layout_width="match_parent"
                     android:layout_height="40dp"
                     android:layout_marginLeft="10dp"
                     android:layout_marginTop="20dp"
+                    android:background="?android:attr/selectableItemBackground"
                     android:orientation="horizontal">
 
                     <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                         android:layout_width="40dp"
                         android:layout_height="match_parent"
                         android:layout_marginRight="15dp"
-                        android:src="@drawable/layerlist_rate"/>
+                        android:src="@drawable/layerlist_rate" />
+
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
@@ -208,12 +209,12 @@
                 </LinearLayout>
 
                 <LinearLayout
-                    android:background="?android:attr/selectableItemBackground"
                     android:layout_width="match_parent"
                     android:layout_height="40dp"
                     android:layout_marginLeft="10dp"
                     android:layout_marginTop="20dp"
                     android:layout_marginBottom="20dp"
+                    android:background="?android:attr/selectableItemBackground"
                     android:orientation="horizontal">
 
                     <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
