--- a/app/src/main/res/layout/fragment_setting.xml
+++ b/app/src/main/res/layout/fragment_setting.xml
@@ -32,6 +32,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="40dp"
                 android:text="NAME"
+                android:id="@+id/display_name"
                 android:background="?android:attr/selectableItemBackground"
                 android:textAlignment="center"
                 android:textColor="#000000"
